--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -29,14 +29,21 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-config-server</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+    <groupId>org.springframework.cloud</groupId>
+    <artifactId>spring-cloud-config-server</artifactId>
+</dependency>
 	</dependencies>
-	
+
+
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -48,7 +55,7 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -57,6 +64,6 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 
 </project>
